# counting_contract

./: Cargo.toml
schema/: counting_contract.json
schema/raw/: execute.json  query.json  response_to_value_incremented.json
src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
src/multitest/: tests.rs
