[package]
name = "counting_contract"
version = "0.2.0"
edition = "2021"

[features]
library = []
tests = ["library", "cw-multi-test"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.2.3"
serde = "1.0.159"
cw-storage-plus = "1.0.1"
thiserror = "1.0.40"
schemars = "0.8.12"
cosmwasm-schema = "1.2.3"
cw-multi-test = {version="0.16.3", optional=true}

[dev-dependencies]
cw-multi-test = "0.16.3"
counting_contract_0_1_3 = { version = "0.1.3", package="counting_contract", features=["tests"], git="https://github.com/govinda-attal/counting_contract.git", tag="v0.1.3"}